# zbx-webhook-proxy

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  example_config.toml
src/: config.rs  filters.rs  handlers.rs  logging.rs  main.rs  zabbix.rs
