[package]
name = "getparams-to-zabbix"
version = "0.1.0"
description = "Accept HTTP GET params and send values to Zabbix Server as JSON"
authors = ["Ross Williams <ross@ross-williams.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
zbx_sender = "0.2.0"
warp = "0.3"
pretty_env_logger = "0.3.1"
dns-lookup = "1.0.1"
log = "0.4.8"
fern = "0.5.8"
chrono = "0.4.9"
clap = { version = "3.1.12", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.18.0", features = ["full"] }
jmespath = { version = "0.3.0", features = ["sync"] }
