[package]
name = "zbx-webhook-proxy"
homepage = "https://github.com/overhacked/zbx-webhook-proxy/"
repository = "https://github.com/overhacked/zbx-webhook-proxy/"
readme = "README.md"
version = "0.2.0"
description = "Accept HTTP GET params or POSTed JSON and send values to Zabbix Server as JSON"
keywords = ["Zabbix","webhook","proxy","json","http"]
categories = ["web-programming","config","command-line-utilities"]
authors = ["Ross Williams <ross@ross-williams.net>"]
license = "BSD-3-Clause"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
# Using feature preserve_order so that JSON bodies are passed
# through to Zabbix in the same key order as they were POSTed
serde_json = { version = "1.0.41", features = ["preserve_order"] }
zbx_sender = "0.3.0"
warp = { version = "0.3", default-features = false }
pretty_env_logger = "0.3.1"
log = "0.4.8"
fern = "0.5.8"
chrono = "0.4.9"
clap = { version = "3.1.12", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros"] }
jmespath = { version = "0.3.0", features = ["sync"] }
trust-dns-resolver = "0.21.2"
toml = "0.5.9"
simple-eyre = "0.3.1"
